--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1146,9 +1146,11 @@ SkeletonEditor.TimeStamp=2024.12.17-19.22.13
 SkeletonEditor.LastCompileMethod=Unknown
 PinnedCommandList.TimeStamp=2024.12.17-19.22.12
 PinnedCommandList.LastCompileMethod=Unknown
+AnimationEditor.TimeStamp=2024.12.17-19.22.02
+AnimationEditor.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/CrossTheRoad/actors/blueprints/BP_FroggoCharacter.BP_FroggoCharacter
 OpenAssetsAtExit=/Game/CrossTheRoad/actors/BpAnim/Mushroom_run.Mushroom_run
